// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppReviews /> render tests renders one review and does not render Load More button 1`] = `
<div
  className="reviews-container"
>
  <div
    aria-labelledby="Review-81"
    className="individual-review-container"
  >
    <div
      className="review-metadata"
    >
      <div
        className="subject-and-rating-container"
      >
        <div
          className="review-subject"
          id="Review-81"
        >
          A Bad Review is Coming
        </div>
        <div
          className="ratings-container"
        >
          <span>
            <div
              className="sr-only"
            >
              This app has a rating of 
              1
               stars out of 5.
            </div>
            <span
              className="ratings-stars"
            >
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="review-author"
      >
        Cletus Slackjaw of the House Yokel
      </div>
      <div
        className="review-date"
      />
    </div>
  </div>
</div>
`;

exports[`<AppReviews /> render tests renders three reviews and displays the Load More button 1`] = `
<div
  className="reviews-container"
>
  <div
    aria-labelledby="Review-81"
    className="individual-review-container"
  >
    <div
      className="review-metadata"
    >
      <div
        className="subject-and-rating-container"
      >
        <div
          className="review-subject"
          id="Review-81"
        >
          A Bad Review is Coming
        </div>
        <div
          className="ratings-container"
        >
          <span>
            <div
              className="sr-only"
            >
              This app has a rating of 
              1
               stars out of 5.
            </div>
            <span
              className="ratings-stars"
            >
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="review-author"
      >
        Cletus Slackjaw of the House Yokel
      </div>
      <div
        className="review-date"
      />
    </div>
  </div>
  <div
    aria-labelledby="Review-82"
    className="individual-review-container"
  >
    <div
      className="review-metadata"
    >
      <div
        className="subject-and-rating-container"
      >
        <div
          className="review-subject"
          id="Review-82"
        >
          Another Bad Review is Coming
        </div>
        <div
          className="ratings-container"
        >
          <span>
            <div
              className="sr-only"
            >
              This app has a rating of 
              1
               stars out of 5.
            </div>
            <span
              className="ratings-stars"
            >
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star-o"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="review-author"
      >
        Cletus Slackjaw the Elder of the House Yokel
      </div>
      <div
        className="review-date"
      />
    </div>
  </div>
  <div
    aria-labelledby="Review-83"
    className="individual-review-container"
  >
    <div
      className="review-metadata"
    >
      <div
        className="subject-and-rating-container"
      >
        <div
          className="review-subject"
          id="Review-83"
        >
          A Good Review is Coming
        </div>
        <div
          className="ratings-container"
        >
          <span>
            <div
              className="sr-only"
            >
              This app has a rating of 
              5
               stars out of 5.
            </div>
            <span
              className="ratings-stars"
            >
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
              <span
                aria-hidden="true"
                className="ratings-star icon-star"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="review-author"
      >
        Cletus Slackjaw the Fat of the House Yokel
      </div>
      <div
        className="review-date"
      />
    </div>
  </div>
  <button
    className="btn fn-secondary load-more-button"
    onClick={[Function]}
  >
    Load More
  </button>
</div>
`;
